tests/errors/type_check/control_flow/branch_false_label_undefined.sim

        fn f(b: bool) {
            entry:
            branch(copy b) [true: yes, false: nowhere]
            yes:
            return
        }
        